--- a/app/src/main/res/layout/activity_roadmap.xml
+++ b/app/src/main/res/layout/activity_roadmap.xml
@@ -22,15 +22,17 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="25dp" />
+        android:layout_height="5dp" />
 
     <ScrollView
         android:layout_width="match_parent"
+        android:padding="11dp"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@drawable/layoutback"
             android:orientation="vertical">
 
             <TextView
@@ -69,25 +71,34 @@
             <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
         android:id="@+id/btn1"
         android:text="WEB DEVELOPER"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#2196F3"
+        android:background="@drawable/buttonbag"
         android:id="@+id/btn2"
         android:text="APP DEVELOPER"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#2196F3"
+        android:background="@drawable/buttonbag"
         android:id="@+id/btn3"
         android:text="DATA SCIENTIST"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="#2196F3"
+        android:background="@drawable/buttonbag"
         android:id="@+id/btn4"
         android:text="AI/ML"/>
 
