--- a/app/src/main/res/layout/coding_practices.xml
+++ b/app/src/main/res/layout/coding_practices.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:orientation="vertical">
 
     <View
@@ -26,11 +27,14 @@
 
     <ScrollView
         android:layout_width="match_parent"
+        android:padding="11dp"
         android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="10dp"
+            android:background="@drawable/layoutback"
             android:orientation="vertical">
 
             <TextView
@@ -70,87 +74,107 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="SLIDING WINDOW AND MATRIX TRAVERSAL"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="TWO POINTERS AND FAST, SLOW POINTERS"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="MERGE SORT AND CYCLIC SORT"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="REVERSAL OF LINKED LIST AND BFS"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn5"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="TWO POINTERS AND FAST, SLOW POINTERS"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="DFS AND TWO HEAPS"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn7"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="SUBSETS AND BINARY SEARCH"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn8"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="BITWISE XOR AND TOP K ELEMENTS"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn9"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="K- WAY MERGE AND TOPOLOGICAL SORT"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn10"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="0-1 KNAPSACK AND FIBONACCI NUMBERS"/>
-
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="15dp"/>
             <Button
                 android:id="@+id/Coding_practices_btn11"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
-                android:backgroundTint="#2196F3"
+                android:background="@drawable/buttonbag"
                 android:text="PALINDROMIC SUBSEQUENCE AND LONGEST COMMON SUBSTRING"/>
 
         </LinearLayout>
