--- a/app/src/main/res/layout/mongodb.xml
+++ b/app/src/main/res/layout/mongodb.xml
@@ -26,7 +26,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="25dp" />
+        android:layout_height="15dp" />
 
     <ScrollView
         android:layout_width="match_parent"
@@ -80,48 +80,59 @@
                     android:id="@+id/Mongodb_btn1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
-                    android:text="INTRODUCTION TO MONGODB"/>
 
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/buttonbag"
+                    android:text="INTRODUCTION TO MONGODB"/>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
                 <Button
                     android:id="@+id/Mongodb_btn2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="MONGODB DATABASE MANAGEMENT"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
                 <Button
                     android:id="@+id/Mongodb_btn3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="RDBMS"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
                 <Button
                     android:id="@+id/Mongodb_btn4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="PIPELINE CONCEPT"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
                 <Button
                     android:id="@+id/Mongodb_btn5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="MONGODB RELATIONSHIPS"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp" />
                 <Button
                     android:id="@+id/Mongodb_btn6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="REGULAR EXPRESSIONS"/>
 
             </LinearLayout>
