--- a/app/src/main/res/layout/operating_system.xml
+++ b/app/src/main/res/layout/operating_system.xml
@@ -31,6 +31,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+android:padding="11dp"
             android:orientation="vertical">
 
             <TextView
@@ -69,7 +70,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:background="#E0FFFF"
+               android:background="@drawable/layoutback"
                 android:gravity="center">
 
                 <Button
@@ -77,57 +78,69 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="INTRODUCTION TO OS"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
                 <Button
                     android:id="@+id/OS_btn2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="PROCESS MANAGEMENT"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
                 <Button
                     android:id="@+id/OS_btn3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="CPU MANAGEMENT"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
                 <Button
                     android:id="@+id/OS_btn4"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="PRIORITY BASED SCHEDULING"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
                 <Button
                     android:id="@+id/OS_btn5"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="SYNCHRONIZATION"/>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
                 <Button
                     android:id="@+id/OS_btn6"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="DEADLOCK"/>
 
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="15dp"/>
 
                 <Button
                     android:id="@+id/OS_btn7"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
-                    android:backgroundTint="#2196F3"
+                    android:background="@drawable/buttonbag"
                     android:text="MEMORY MANAGEMENT"/>
 
 
